# zerdisha

./: .env.example  .gitignore  README.md  docker-compose.yml  gemini.md  install.py  prd.md  pyproject.toml  run_full_test_suite.sh  setup-docker.sh  test.md  test_azure_config.py
.github/: DEVELOPER_HELP.md
.kiro/specs/peengine-core-solidification/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: AZURE_GPT5_SETUP.md  BASELINE_UPDATE.md  MANUAL_TESTING_PROTOCOL.md  TESTING_SUITE_README.md  TEST_SCENARIOS.md  VALIDATION_CHECKLIST.md
evolution/: architecture.md  connections.md  features.md  future.md  gaps.md  philosophy-alignment.md  philosophy.md
peengine/: __init__.py  cli.py
peengine/agents/: conversational.py  metacognitive.py  pattern_detector.py
peengine/core/: analytics.py  embeddings.py  json_utils.py  llm_client.py  orchestrator.py  prompts.py
peengine/database/: mongodb_client.py  neo4j_client.py
peengine/models/: config.py  graph.py  responses.py
peengine/tools/: clear_databases.py  import_knowledge_graphs.py
tests/: performance_benchmarks.py  test_cli.py  test_conversational_agent.py  test_embeddings.py  test_integration.py  test_live_llm.py  test_metacognitive_agent.py  test_models.py  test_orchestrator.py
