[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zerdisha"
version = "0.1.0"
description = "Zerdisha - A terminal-based interactive learning tool"
authors = [{name = "Awebisam", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "neo4j>=5.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.20.0",
    "python-dotenv>=1.0.0",
    "textual>=0.41.0",
    "pydantic-settings>=2.0.0",
    "pymongo>=4.0.0",
    "motor>=3.0.0",  # Async MongoDB driver
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
zerdisha = "peengine.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["peengine*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true